--- a/src/main/resources/templates/board/freeboard.html
+++ b/src/main/resources/templates/board/freeboard.html
@@ -6,11 +6,11 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>메인</title>
+    <title>자유게시판</title>
 </head>
 <body>
-<main layout:fragment="main">
-    <h1>메인입니다.</h1>
+<main layout:fragment="main" class="page-body">
+    <h1>자유게시판</h1>
 </main>
 </body>
 </html>
