--- a/src/main/resources/templates/board/reviewboard.html
+++ b/src/main/resources/templates/board/reviewboard.html
@@ -1,16 +1,16 @@
 <!doctype html>
-<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:th="http://www.thymeleaf.org"
       layout:decorate="~{layout/default}">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>메인</title>
+    <title>후기게시판</title>
 </head>
 <body>
-<main layout:fragment="main">
-    <h1>메인입니다.</h1>
+<main layout:fragment="main" class="page-body">
+    <h1>리뷰게시판</h1>
 </main>
 </body>
 </html>
