--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -6,22 +6,45 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>로그인 페이지</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 </head>
 <body>
-<div class="login-container" layout:fragment="main">
-    <form action="auth/login" class="login-form">
-        <h2>Login</h2>
-        <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" id="username" name="username" placeholder="Enter your username" required>
+    <main class="container" layout:fragment="main">
+
+        <div class="login-content login-content-signin" ng-hide="showSignIn">
+            <div>
+                <h2>Log in</h2>
+                <form class="wrapper-box" role="form" ng-submit="login()">
+                    <input type="email"
+                           ng-model="email"
+                           class="form-control form-control-email"
+                           placeholder="Email address"
+                           required>
+                    <input type="password"
+                           ng-model="password"
+                           class="form-control form-control-password"
+                           placeholder="Password"
+                           required >
+                    <a class="outer-link pull-left" href="#/forgot">Forgot Password</a>
+                    <button type="submit" class="btn btn-submit btn-default pull-right">Log in</button>
+                </form>
+            </div>
         </div>
-        <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password" placeholder="Enter your password" required>
+
+        <div class="login-switcher">
+            <div class="login-switcher-signup" ng-hide="showSignIn">
+                <h3>회원이 아니신가요??</h3>
+                <div>
+
+                    <a th:href="@{/member/signup}">회원가입</a>
+                </div>
+            </div>
         </div>
-        <button type="submit" class="btn">Login</button>
-        <p class="signup-link">Don't have an account? <a href="#">Sign up</a></p>
-    </form>
-</div>
+
+
+    </main>
+<!--    <script layout:fragment="js" th:src="@{/js/login/login.js}"></script>-->
+
 </body>
 </html>
