--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,25 +4,53 @@
     <title>
         헤더
     </title>
+    <style>
+        .header-links {
+            background-color: black;
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            height: 100%;
+            border: 10px;
+        }
+    </style>
 </head>
 <body>
-<header th:fragment="headerFragment">
+<header th:fragment="headerFragment" class="header">
+    <div class="wrap" style="border: 50px">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 d-flex justify-content-end">
+                    <div sec:authorize="isAnonymous()" class="header-links d-flex align-items-center">
+                        <input type="button" value="로그인" th:onclick="|location.href = '@{/auth/login}'|" style="border: none; background: none; color: white; cursor:pointer">
+                        <p style="margin: 0 5px; color:white;">｜</p>
+                        <input type="button" value="회원 가입" th:onclick="|location.href = '@{/member/termsOfService}'|" style="border: none; background: none; color: white; cursor:pointer">
+
+                    </div>
+                    <div sec:authorize="isAuthenticated()" class="header-links d-flex align-items-center">
+                        <p th:text="${#authentication.principal.member.name + ' 님, 반갑습니다🐶'}" style="margin: 0 5px; color: white"></p>
+                        <form th:action="@{/auth/logout}" method="post">
+                            <input type="submit" value="로그아웃" style="border: none; background: none; color: white; cursor:pointer">
+                        </form>
+                        <p style="margin: 0 5px; color:white;">｜</p>
+                        <a th:href="@{/mypage/mypage}" style="border: none; background: none; color: white">마이페이지</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
         <div  class="container">
             <a  class="navbar-brand" th:href="@{/}"><span class="flaticon-pawprint-1 mr-2"></span>e북랜드</a>
-
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
-                    aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="fa fa-bars"></span> Menu
-            </button>
             <div class="collapse navbar-collapse" id="ftco-nav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a th:href="@{/}" class="nav-link">메인페이지</a></li>
-                    <li class="nav-item"><a th:href="@{/board/freeboard}" class="nav-link">자유게시판입니다</a></li>
+                    <li class="nav-item"><a th:href="@{/board/freeboard}" class="nav-link">자유게시판</a></li>
                     <li class="nav-item"><a th:href="@{/board/reviewboard}" class="nav-link">후기게시판</a></li>
                     <li class="nav-item"><a th:href="@{/board/noticeboard}" class="nav-link">공지사항</a></li>
-                    <li class="nav-item"><a sec:authorize="hasRole('ADMIN')" th:href="@{/com/cstangga/ebookland/board/adminboard}" class="nav-link">관리자 게시판</a></li>
+                    <li class="nav-item"><a th:href="@{/member/signup}" class="nav-link">회원가입</a></li>
+                    <li class="nav-item"><a sec:authorize="hasRole('ADMIN')" th:href="@{/board/adminboard}" class="nav-link">관리자 게시판</a></li>
                 </ul>
             </div>
         </div>
