--- a/src/main/resources/templates/board/adminboard.html
+++ b/src/main/resources/templates/board/adminboard.html
@@ -12,7 +12,8 @@
 </head>
 <body>
 <main layout:fragment="main" class="container">
-    <h1>자유게시판</h1>
+    <h1>관리자 게시판</h1>
+    <a th:href="@{/book/registbook}"><button type="button"> 도서 등록</button></a>
 </main>
 </body>
 </html>
