책 정보수정, 삭제 #1

--- a/src/main/resources/templates/board/adminboard.html
+++ b/src/main/resources/templates/board/adminboard.html
@@ -14,6 +14,7 @@
 <main layout:fragment="main" class="container">
     <h1>관리자 게시판</h1>
     <a th:href="@{/book/registbook}"><button type="button"> 도서 등록</button></a>
+    <a th:href="@{/book/modifybook}"><button type="button"> 도서 수정</button></a>
 </main>
 </body>
 </html>
