--- a/src/main/resources/templates/book/registbook.html
+++ b/src/main/resources/templates/book/registbook.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>도서 등록</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"></head><body><main class="container" layout:fragment="main">
+          integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"></head>
+<body>
+<main class="container" layout:fragment="main">
     <form th:action="@{/book/registbook}" id="registBookForm" enctype="multipart/form-data"
           method="post" onsubmit="return isValid()">
         <div class="row">
