--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -46,10 +46,9 @@
             <div class="collapse navbar-collapse" id="ftco-nav" align="center">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a th:href="@{/}" class="nav-link">메인페이지</a></li>
-                    <li class="nav-item"><a th:href="@{/board/freeboard}" class="nav-link">자유게시판</a></li>
-                    <li class="nav-item"><a th:href="@{/board/reviewboard}" class="nav-link">후기게시판</a></li>
-                    <li class="nav-item"><a th:href="@{/board/noticeboard}" class="nav-link">공지사항</a></li>
-                    <li class="nav-item"><a sec:authorize="hasRole('ADMIN')" th:href="@{/board/adminboard}" class="nav-link">관리자 게시판</a></li>
+                    <li class="nav-item"><a th:href="@{/freeboard/list}" class="nav-link">자유게시판</a></li>
+                    <li class="nav-item"><a th:href="@{/noticeboard/list}" class="nav-link">공지사항</a></li>
+                    <li class="nav-item"><a sec:authorize="hasRole('ADMIN')" th:href="@{/admin/adminboard}" class="nav-link">관리자 게시판</a></li>
                 </ul>
             </div>
         </div>
