회원정보 번경 #10

--- a/src/main/resources/templates/bookboard/mybook.html
+++ b/src/main/resources/templates/bookboard/mybook.html
@@ -6,11 +6,12 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>회원정보</title>
+    <title>Document</title>
 </head>
 <body>
-<main layout:fragment="main" class="container">
-    <h1>회원 정보</h1>
+<main layout:fragment="main" class="container mt-5">
+    <h1>책 리스트가 보입니다.</h1>
+    <span>렌탈한 책과 eBook으로 구매한 책이 보입니다.</span>
 </main>
 </body>
 </html>
