--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -24,16 +24,16 @@
                     <div sec:authorize="isAnonymous()" class="header-links d-flex align-items-center">
                         <input type="button" value="로그인" th:onclick="|location.href = '@{/auth/login}'|" style="border: none; background: none; color: black; cursor:pointer">
                         <p style="margin: 0 5px; color:white;">｜</p>
-                        <input type="button" value="회원 가입" th:onclick="|location.href = '@{/member/termsOfService}'|" style="border: none; background: none; color: black; cursor:pointer">
+                        <input type="button" value="회원 가입" th:onclick="|location.href = '@{/member/signup}'|" style="border: none; background: none; color: black; cursor:pointer">
 
                     </div>
                     <div sec:authorize="isAuthenticated()" class="header-links d-flex align-items-center">
-                        <p th:text="${#authentication.principal.member.name + ' 님, 반갑습니다🐶'}" style="margin: 0 5px; color: black"></p>
+                        <p th:text="${#authentication.principal.member.name +' 님, 반갑습니다'}" style="margin: 0 5px; color: black"></p>
                         <form th:action="@{/auth/logout}" method="post">
                             <input type="submit" value="로그아웃" style="border: none; background: none; color: black; cursor:pointer">
                         </form>
                         <p style="margin: 0 5px; color:black;">｜</p>
-                        <a th:href="@{/mypage/mypage}" style="border: none; background: none; color: black">마이페이지</a>
+                        <a th:href="@{/member/mypage}" style="border: none; background: none; color: black">마이페이지</a>
                     </div>
                 </div>
             </div>
@@ -48,6 +48,7 @@
                     <li class="nav-item"><a th:href="@{/}" class="nav-link">메인페이지</a></li>
                     <li class="nav-item"><a th:href="@{/freeboard/list}" class="nav-link">자유게시판</a></li>
                     <li class="nav-item"><a th:href="@{/noticeboard/list}" class="nav-link">공지사항</a></li>
+                    <li class="nav-item"><a sec:authorize="hasRole('MEMBER')" th:href="@{/bookboard/mybook}" class="nav-link">책 읽기</a></li>
                     <li class="nav-item"><a sec:authorize="hasRole('ADMIN')" th:href="@{/admin/adminboard}" class="nav-link">관리자 게시판</a></li>
                 </ul>
             </div>
